# py_expected

./: README.md  pyproject.toml
src/expected/: __init__.py
src/py_expected/: __init__.py  expected.py
tests/: expected.py
